# gemini-live-sales-coach

./: .gitignore  LOADOUT.md  README.md  UX-PILOT-PROMPTS.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: agent.py  config.py
backend/app/prompts/: coach_system.py  objections.py  personas.py
backend/app/tools/: coaching.py  crm.py  dashboard.py  prospect.py
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CallControls.tsx  CoachingPanel.tsx  KeyMoments.tsx  ObjectionTracker.tsx  ScoreCard.tsx  SentimentGauge.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useAudioPlayback.ts  useAudioStream.ts  useCallMetrics.ts  useScreenShare.ts  useWebSocket.ts
frontend/src/lib/: types.ts
